--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [pull_request, push, workflow_dispatch]
 
 jobs:
   build:
-    name: ubuntu-latest
+    name: Build
     runs-on: ubuntu-latest
     container: devkitpro/devkitppc:latest
 
